--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Danish Ali",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mongoose": "^8.2.2",
